@@ -4568,7 +4568,7 @@
 20130914 ui/gtk/gtkui.c: make mousewheel scrolling on memory browser GTK+ 3.4
          compatible and keep the selected row. (Sergio).
 20130928 debugger/breakpoint.[c|h],spectrum.c: fix time breakpoints later than
-         a frame (patch #302) (Sergio).
+         a frame (fixes bug #302) (Sergio).
 20130928 ui/win32/options.pl: ignore unused-but-set-variable warnings for
          option dialogs on win32 UI (Sergio).
 20130928 Makefile.am,compat/{Makefile.am,win32/distribution.mk}: take Windows
@@ -4586,6 +4586,8 @@
 20131013 configure.ac,Makefile.am,compat/{Makefile.am,amiga/Makefile.am,
          linux/Makefile.am,morphos/Makefile.am,unix/Makefile.am,wii/Makefile.am,
          win32/Makefile.am}: use 'subdir-objects' option as advised by automake
-         1.14 to place object files in subdirectories (Sergio).
+         1.14 to place object files in subdirectories (patch #317) (Sergio).
 20131013 configure.ac: replace obsolete ac_cv_prog_gcc with ac_cv_c_compiler_gnu
          (Sergio).
+20131016 debugger/{command.c,commandl.l}: add I and R setting and getting to the
+         debugger (patch #319) (Sergio).
